[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/GameDemo.gd" type="Script" id=2]
[ext_resource path="res://Resources/Dynamic Fonts/MainFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Environment.tres" type="Environment" id=4]
[ext_resource path="res://Resources/Themes/MainTheme.tres" type="Theme" id=5]

[sub_resource type="Animation" id=1]
resource_name = "BGFadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("FullBG:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.52549, 0.52549, 0.52549, 0.588235 ), Color( 0.52549, 0.52549, 0.52549, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FullBG:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.52549, 0.52549, 0.52549, 0.588235 ) ]
}

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BGFadeOut = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="GameDemo" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="StationaryObjects" type="Spatial" parent="GameDemo"]

[node name="MovingObjects" type="Spatial" parent="GameDemo"]

[node name="Camera" type="Camera" parent="GameDemo"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 7, 35, -10 )
far = 200.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="GameDemo"]
environment = ExtResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="GameDemo"]
transform = Transform( 0.981627, 0.190809, 0, -0.176285, 0.906905, 0.382683, 0.0730195, -0.375652, 0.92388, 7, 35, 5 )

[node name="FullBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
color = Color( 0.52549, 0.52549, 0.52549, 0.588235 )

[node name="TitleBG" type="Panel" parent="FullBG"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -426.0
margin_top = 14.0
margin_right = -216.0
margin_bottom = 85.0

[node name="TitleLabel" type="Label" parent="FullBG/TitleBG"]
margin_right = 129.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Car Case"
align = 1
valign = 1

[node name="MainBG" type="Panel" parent="FullBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -443.0
margin_top = -192.0
margin_right = -194.0
margin_bottom = -43.0

[node name="MainVBox" type="VBoxContainer" parent="FullBG/MainBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.5
margin_top = -54.5
margin_right = 100.5
margin_bottom = 55.5
custom_constants/separation = 10

[node name="Play" type="Button" parent="FullBG/MainBG/MainVBox"]
margin_right = 200.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 20 )
text = "Play"

[node name="Store" type="Button" parent="FullBG/MainBG/MainVBox"]
margin_top = 30.0
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 20 )
text = "Store"

[node name="Settings" type="Button" parent="FullBG/MainBG/MainVBox"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 20 )
text = "Settings"

[node name="Quit" type="Button" parent="FullBG/MainBG/MainVBox"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 110.0
rect_min_size = Vector2( 200, 20 )
text = "Quit"

[connection signal="pressed" from="FullBG/MainBG/MainVBox/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="FullBG/MainBG/MainVBox/Store" to="." method="_on_Store_pressed"]
[connection signal="pressed" from="FullBG/MainBG/MainVBox/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="FullBG/MainBG/MainVBox/Quit" to="." method="_on_Quit_pressed"]
